# docs/api/voidengine/swagger.yaml
@@ -1,4 +1,71 @@
 basePath: 这里写base path
+definitions:
+  message.AddUserRequest:
+    properties:
+      password:
+        description: 密码
+        maxLength: 20
+        minLength: 8
+        type: string
+      username:
+        description: 用户名
+        maxLength: 32
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  message.DeleteUserRequest:
+    properties:
+      username:
+        description: 用户名
+        maxLength: 32
+        type: string
+    required:
+    - username
+    type: object
+  message.ListUserRequest:
+    properties:
+      orderBy:
+        description: 排序方式[desc, asc]
+        example: desc
+        maxLength: 4
+        type: string
+      pageNo:
+        description: 当前页码
+        example: 1
+        minimum: 1
+        type: integer
+      pageSize:
+        description: 每页数量
+        example: 20
+        maximum: 100
+        minimum: 1
+        type: integer
+    type: object
+  message.ModifyUserRequest:
+    properties:
+      password:
+        description: 密码
+        maxLength: 20
+        minLength: 8
+        type: string
+      username:
+        description: 用户名
+        maxLength: 32
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  response.ApiResponse:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
+    type: object
 host: 这里写接口服务的host
 info:
   contact:
@@ -12,21 +79,100 @@ info:
   termsOfService: http://swagger.io/terms/
   title: '"API 文档"'
 paths:
-  /ping:
-    get:
+  /v1//user:
+    delete:
       consumes:
       - application/json
-      description: Ping example endpoint
+      description: Delete a User
+      parameters:
+      - description: delete user param
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/message.DeleteUserRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Ping Example
+            $ref: '#/definitions/response.ApiResponse'
       tags:
-      - example
+      - User
+    post:
+      consumes:
+      - application/json
+      description: Add a User
+      parameters:
+      - description: add user param
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/message.AddUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - User
+    put:
+      consumes:
+      - application/json
+      description: Add a User
+      parameters:
+      - description: modify user param
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/message.ModifyUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - User
+  /v1/ping:
+    get:
+      consumes:
+      - application/json
+      description: Ping
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - ping
+  /v1/user:
+    get:
+      consumes:
+      - application/json
+      description: Add a User
+      parameters:
+      - description: list user param
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/message.ListUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ApiResponse'
+      tags:
+      - User
 swagger: "2.0"
